tests/should_fail/option_must_use_fn.nv
module main

// SHOULD FAIL: bare Option expression from function call is not allowed
fn maybeFive() -> Option(Int) {
    return Some(5)
}

maybeFive()
println("should not reach")
